--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PWA DEMO</title>
+    <link rel = "manifest" href = "./manifest.json">
 </head>
 <body>
-    Hello Object Oriented Developers
+    <div>
+        Hello Object Oriented Developers
+    </div>
+    <script src="public/app.js"></script>
 </body>
+
 </html>
