Organized resources alittle better

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0a0a0a"/>
     <title>PWA DEMO</title>
     <link rel = "manifest" href = "./manifest.json">
-    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="apple-touch-icon" href="icons/icon.png">
 </head>
 <body>
     <div>
